# sikit-kicad

./: CMakeLists.txt  README.md  plugin.json
pcm/: packages.json  repository.json
proto/: README.md
scripts/: install-local.sh  itest.sh  package-pcm.sh
src/: KiCadIpc.cpp  KiCadIpc.h  main.cpp
